--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,11 @@ services:
       dockerfile: Dockerfile
     container_name: nuxt4-test
     restart: unless-stopped
-    ports:
-      - "3000:3000"
+    # 当使用 nginx 反向代理时，不需要对外暴露此端口
+    # ports:
+    #   - "3000:3000"
+    expose:
+      - "3000"
     environment:
       - NODE_ENV=production
       - HOST=0.0.0.0
@@ -38,7 +41,7 @@ services:
     container_name: nuxt4-nginx
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "3000:80"
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
