--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,3 +16,26 @@
     }
   ]
 }
+
+// {
+//   "extends": "./.nuxt/tsconfig.json",
+//   "compilerOptions": {
+//     "module": "ES2022",
+//     "target": "ES2022",
+//     "moduleResolution": "Bundler",
+
+//     "strict": true,
+//     "noImplicitAny": true,
+//     "strictNullChecks": true,
+//     "allowSyntheticDefaultImports": true,
+//     "esModuleInterop": true,
+//     "jsx": "preserve",
+//     "lib": ["ESNext", "DOM"],
+//     "baseUrl": ".",
+//     "paths": {
+//       "@/*": ["./*"],
+//       "~/*": ["./*"]
+//     }
+//   },
+//   "include": ["env.d.ts", ".nuxt/nuxt.d.ts", "**/*"]
+// }
