--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
-      "better-sqlite3",
       "esbuild",
       "sharp",
       "unrs-resolver"
@@ -26,12 +25,16 @@
     "@nuxt/scripts": "0.13.2",
     "@nuxt/ui": "4.3.0",
     "@unhead/vue": "^2.1.1",
-    "better-sqlite3": "^12.5.0",
     "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
     "sass": "^1.97.1",
     "typescript": "^5.9.3",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
